<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">泰康医生</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_main">首页</string>
    <string name="tab_information">资讯</string>
    <string name="tab_selfidiagnosis">自诊</string>
    <string name="tab_askdoctor">一键问医</string>
    <string name="information_top">健康资讯</string>
    <string name="selfdiagnosis_top">健康自诊</string>
    <string name="weather_pm">PM2.5</string>
    <string name="season_health">节气养生</string>
    <string name="health_plan">健康计划</string>
    <string name="date">2015-09-24</string>
    <string name="havedrink">每天喝水</string>
    <string name="login">登录</string>
    <string name="mycenter">个人中心</string>
    <string name="myname">泰康人寿</string>
    <string name="city">北京</string>
    <string name="myphone">18955702489</string>
    <string name="exit">退出登录</string>
    <string name="product_active">产品激活</string>
    <string name="health_plans">健康计划</string>
    <string name="my_collections">我的收藏</string>
    <string name="my_tests">我的评测</string>
    <string name="my_services">我的服务</string>
    <string name="productactive_notice">用户激活之后可以享受一键问医等增值服务哦！</string>
    <string name="real_name">真实姓名</string>
    <string name="active_code">激活码</string>
    <string name="active">激活</string>
    <string name="collection_food">那些打折"儿童"旗号的食品</string>
    <string name="myservice_line1">您目前享有</string>
    <string name="myservice_line2">电话医生服务   服务有效期</string>
    <string name="myservice_line3">2015年6月6到2015年6月6</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="title_activity_add_plan">AddPlanActivity</string>
    <string name="title_activity_health_remind">HealthRemindActivity</string>
    <string name="seasonalthreapy">节气养生</string>
    <string name="tcmphysique_title">请根据近一年的感觉和体验，回答以下问题</string>
    <string name="commit_test">提交测试</string>
    <string name="tcmphysique_test">中医体质测评问卷</string>
    <string name="title_activity_add_new_remind">AddNewRemindActivity</string>
    <string name="choose_citys">选择城市</string>
    <string name="air_quality_test">空气质量检测</string>
    <string name="air_quality">空气质量(一级 )</string>
    <string name="care_notify">爱心提示：</string>
    <string name="current_city">当前城市:</string>
    <string name="last_update_time">2015-10-20 15:14:34更新</string>
    <string name="health_effect">对健康影响情况：</string>
    <string name="air_condition">空气质量基本令人满意</string>
    <string name="measures_take">无采取的措施</string>
    <string name="advice_measures">建议采取的措施：</string>
    <string name="data_source">数据来源: PM2.5.in</string>
    <string name="meiyou">没有</string>
    <string name="henshao">很少</string>
    <string name="youshi">有时</string>
    <string name="jingchang">经常</string>
    <string name="zongshi">总是</string>
    <string name="tcmphysique_report">中医体质评测报告</string>
    <string name="re_evaluate">重新评测</string>
    <string name="seasonaltherapy_meals">中医节气养生-膳食</string>
    <string name="seasonaltherapy_sports">中医节气养生-运动</string>
    <string name="seasonaltherapy_sleep">中医节气养生-起居</string>
    <string name="seasonaltherapy_yichi">宜吃:</string>
    <string name="seasonaltherapy_shaochi">少吃:</string>
    <string name="seasonaltherapy_jichi">忌吃:</string>
    <string name="title_activity_center_info">CenterInfoActivity</string>
    <string name="title_activity_my_collection_info">MyCollectionInfoActivity</string>
    <string name="title_activity_chr_disease_risk">ChrDiseaseRiskActivity</string>
    <string name="title_activity_wen_juan">WenJuanActivity</string>
    <string name="title_activity_diabetes_result">DiabetesResultActivity</string>
    <string name="title_activity_ping_che_result">PingCheResultActivity</string>
    <string name="title_activity_ask_doctor">AskDoctorActivity</string>
    <string name="title_activity_health_risk_ques_twelve">HealthRiskQuesTwelveActivity</string>
    <string name="title_activity_health_risk_ques_thirty">HealthRiskQuesThirtyActivity</string>
    <string name="title_activity_health_risk_ques_forty">HealthRiskQuesFortyActivity</string>
    <string name="title_activity_health_risk_ques_fifty">HealthRiskQuesFiftyActivity</string>
    <string name="title_activity_health_risk_ques_sixty">HealthRiskQuesSixtyActivity</string>
    <string name="title_activity_health_risk_ques_four">HealthRiskQuesFourActivity</string>
    <string name="title_activity_health_risk_ques_itenty">HealthRiskQuesItentyActivity</string>
    <string name="title_activity_health_risk_">HealthRisk_Activity</string>
    <string name="title_activity_update_pass">UpdatePassActivity</string>
    <string name="title_activity_mycenter_test">mycenter_test</string>
    <string name="title_activity_tcm_phisique_man_bing">TcmPhisiqueManBingActivity</string>
    <string name="title_activity_home_web_info">HomeWebInfoActivity</string>
    <string name="title_activity_regist_regular">RegistRegularActivity</string>

</resources>
