<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_seasonaltherapy_meals"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/dot"
            android:drawablePadding="5dp"
            android:text="@string/seasonaltherapy_sleep"
            android:textColor="@color/black"
            android:textSize="15sp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="#969696" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tv_seasonaltherapy_sleeps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="4dp"
            android:drawablePadding="5dp"
            android:paddingLeft="10dp"
            android:text="@string/seasonaltherapy_yichi"
            android:textColor="@color/main" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/trigle"
            android:drawablePadding="5dp"
            android:text="@string/seasonaltherapy_yichi" />

        <TextView
            android:id="@+id/tv_seasonaltherapy_yichi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/seasonaltherapy_yichi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/trigle"
            android:drawablePadding="5dp"
            android:text="@string/seasonaltherapy_shaochi" />

        <TextView
            android:id="@+id/tv_seasonaltherapy_shaochi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/seasonaltherapy_shaochi" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:drawableLeft="@drawable/trigle"
            android:drawablePadding="5dp"
            android:text="@string/seasonaltherapy_yichi" />

        <TextView
            android:id="@+id/tv_seasonaltherapy_jichi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/seasonaltherapy_jichi" />
    </LinearLayout>

</LinearLayout>