<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="#F2F2F2"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/page_city" />

    <LinearLayout
        android:id="@+id/ll_loadsuccess"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_city"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_current_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_update_time"
                android:textColor="#D9D9D9"
                android:textSize="13sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" >

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#D9D9D9" />

            <TextView
                android:id="@+id/tv_airquality"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/air_quality"
                android:textColor="#5BB3D7" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#D9D9D9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal" >

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="10dp" >

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@drawable/round_image_green" />

                        <TextView
                            android:id="@+id/tv_pm25"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="10dp" >

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="120dp"
                            android:background="@drawable/round_image_blue" />

                        <TextView
                            android:id="@+id/tv_aqi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:text=""
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />
                    </RelativeLayout>
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="right"
                android:orientation="horizontal"
                android:paddingRight="10dp" >

                <TextView
                    android:id="@+id/data_source"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/data_source"
                    android:textColor="#D9D9D9" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp"
            android:paddingTop="4dp" >

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#D9D9D9" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/care_notify"
                android:textColor="#5BB3D7" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="#D9D9D9" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/health_effect"
                android:textColor="#5BB3D7"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_aircondition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advice_measures"
                android:textColor="#5BB3D7"
                android:textSize="15sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/tv_measurstake"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>